--- a/index.html
+++ b/index.html
@@ -4,13 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/src/style.scss">
-    <title>Vite App</title>
+    <title>War game</title>
   </head>
   <body>
-    <canvas id="canvas" width="360" height="640"></canvas>
-	<button id="skip">Skip</button>
-	<div id="status"></div>
-    <script type="module" src="/src/index.ts"></script>
+    <div id="app"></div>
+
+    <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
