--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>War game</title>
+    <meta property="og:url"           content="https://war.developerro.com" />
+    <meta property="og:type"          content="website" />
+    <meta property="og:title"         content="Dev_Wars" />
+    <meta property="og:description"   content="a fast risk like game" />
+    <meta property="og:image"         content="https://www.your-domain.com/path/image.jpg" />
   </head>
   <body>
     <div id="app"></div>
