adding pwa and some changes

--- a/index.html
+++ b/index.html
@@ -2,14 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>War game</title>
-    <meta property="og:url"           content="https://war.developerro.com" />
-    <meta property="og:type"          content="website" />
-    <meta property="og:title"         content="Dev_Wars" />
-    <meta property="og:description"   content="a fast risk like game" />
-    <meta property="og:image"         content="https://www.your-domain.com/path/image.jpg" />
+
+    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+    <link rel="alternate icon" href="/assets/favicon.ico" type="image/png" sizes="16x16">
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16x16.png">
+
+    <meta name="description" content="a fast risk like game">
+    <meta name="theme-color" content="#ff456f">
   </head>
   <body>
     <div id="app"></div>
