updating color in icons

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 
     <meta name="description" content="a fast risk like game">
-    <meta name="theme-color" content="#fffcf9">
+    <meta name="theme-color" content="#577590">
   </head>
   <body>
     <div id="app"></div>
